--- a/ngx_nullimp/config
+++ b/ngx_nullimp/config
@@ -25,9 +25,9 @@ if [ $ngx_found = yes ]; then
     HTTP_MODULES="$HTTP_MODULES ngx_http_nullimp_module"
     #HTTP_MODULES="$HTTP_MODULES ngx_http_circle_gif_module"
     #NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_circle_gif_module.cpp"
-    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_nullimp.cpp $ngx_addon_dir/cimp.cpp $ngx_addon_dir/cvimp.cpp $ngx_addon_dir/vipsimp.cpp"
+    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_nullimp.cpp $ngx_addon_dir/cimp.cpp $ngx_addon_dir/cvimp.cpp $ngx_addon_dir/gmimp.cpp $ngx_addon_dir/vipsimp.cpp"
     #CORE_LIBS="$CORE_LIBS -lMagickWand -lstdc++ -lopencv_core -lopencv_contrib -lopencv_features2d -lopencv_imgproc -lopencv_ml -lopencv_nonfree -lopencv_objdetect  "
-    CORE_LIBS="$CORE_LIBS -lMagickWand -lstdc++ `pkg-config --libs opencv`  "
+    CORE_LIBS="$CORE_LIBS -lMagickCore -lMagickWand -lstdc++ `pkg-config --libs opencv`  "
     CFLAGS="$CFLAGS -g -std=c++11 `MagickWand-config --cflags` `pkg-config --cflags opencv` "
 else
     cat << END
