--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,25 @@
 cmake_minimum_required(VERSION 2.8)
 
-include(FindPkgConfig)
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_C_FLAGS "-g -O2 -pipe -std=c99")
+set(CMAKE_CXX_FLAGS "-g -O2 -pipe -std=c++11")
 
 add_definitions(-DABC=1)
 
-add_executable(dnimp dnimp/main.cpp)
+add_executable(dnimp dnimp/main.cpp dnimp/benchmark.cpp
+  )
 
+include(FindPkgConfig)
 pkg_check_modules(OPENCV REQUIRED opencv)
 pkg_check_modules(ZMQ REQUIRED libzmq )
 pkg_check_modules(GMK REQUIRED GraphicsMagick)
+pkg_check_modules(GMKW REQUIRED GraphicsMagickWand)
+pkg_check_modules(VIPS REQUIRED vipsCC)
 
-target_link_libraries(dnimp ${OPENCV_LIBRARIES} ${ZMQ-LIBRARIES} ${GMK-LIBRARIES})
+include_directories(${GMKW_INCLUDE_DIRS} ${VIPS_INCLUDE_DIRS})
+target_link_libraries(dnimp ${OPENCV_LIBRARIES} ${ZMQ_LIBRARIES}
+  ${GMKW_LIBRARIES}  
+  ${VIPS_LIBRARIES}
+  -lvipsCC
+  )
