--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_C_COMPILER clang)
-set(CMAKE_CXX_COMPILER clang++)
+#set(CMAKE_C_COMPILER clang)
+#set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_C_FLAGS "-g -O2 -pipe -std=c99")
 set(CMAKE_CXX_FLAGS "-g -O2 -pipe -std=c++11")
 
 add_definitions(-DABC=1)
 
 add_executable(dnimp dnimp/main.cpp dnimp/benchmark.cpp dnimp/baseimp.cpp
+  dnimp/ocvimp.cpp dnimp/impfactory.cpp
   )
 
 include(FindPkgConfig)
