--- a/imgtrain/Makefile
+++ b/imgtrain/Makefile
@@ -1,12 +1,16 @@
 
 CFLAGS=-g -Wall -I/usr/include -I/usr/include/opencv2
-LDFLAGS=-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_photo
+LDFLAGS=-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_photo -lopencv_objdetect
 CXX=g++
 
 
-all: veridt
+all: veridt symdraw
 
 veridt: main.o funcs.o
+	$(CXX) -o $@ $< $(LDFLAGS)
+
+
+symdraw: symdraw.o
 	$(CXX) -o $@ $< $(LDFLAGS)
 
 .cpp.o:
